# replikator-plugin

./: .gitignore  CMakeLists.txt  index.html  package-lock.json  package.json  processing-profile.json
.github/workflows/: build.yml
plugin/: CMakeLists.txt
plugin/installer/macos/: package.plist
plugin/installer/windows/: installer.iss
plugin/src/: AudioEngine.cpp  AudioEngine.h  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProfileLoader.cpp
plugin/src/audio/: AudioEngine.cpp  AudioEngine.h  ProfileLoader.cpp  ProfileLoader.h
src/: App.jsx  analyzer.js  index.js  test.js
src/analysis/: AnalysisEngine.cpp  AnalysisEngine.h  AudioAnalyzer.cpp  AudioAnalyzer.h  Main.cpp  MainComponent.cpp  MainComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
src/analyzers/: dynamicsAnalyzer.js  transientsAnalyzer.js
src/components/: AnalysisResults.jsx  AudioAnalyzer.jsx  VolumeControl.jsx  WaveformDisplay.jsx  styles.js
src/loader/: PluginProcessor.cpp  PluginProcessor.h
src/utils/: audioLoader.js  fft.js  generateTestFiles.js
